--- a/getdelays.be/Views/User/MakeChangeInformation.cshtml
+++ b/getdelays.be/Views/User/MakeChangeInformation.cshtml
@@ -10,7 +10,7 @@
         <legend>Change your information</legend>
         <div class="form-group">
             <label>Email address</label>
-            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" value="@u.email">
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" id="disabledInput"  disabled="" placeholder="@u.email">
         </div>
         <div class="form-group">
             <label>Name:</label>
