--- a/getdelays.be/Views/Home/Index.cshtml
+++ b/getdelays.be/Views/Home/Index.cshtml
@@ -1,48 +1,13 @@
 ﻿@using GetDelaysAPI;
 @{
     ViewBag.Title = "Index";
-    List<StationData> stat = ViewBag.s;
 }
-<h6>Getdelays.be helps people to see which trains or other(in the futur) are in delays</h6>
-<br /><p>There are @ViewBag.CountStation stations in the system.</p>
-@using (Html.BeginForm("GetConnection", "Connection"))
-{
-    <fieldset>
-        <legend>Search a connection</legend>
-        <ul>
-            <li id="searchFrom">
-                <div class="form-group">
-                    <label>From</label>
-                    <input type="text" id="statFrom" name="dep" onkeydown="ListStationFrom()" placeholder="Enter a station" />
-                </div>
-            </li>
-            @foreach (StationData s in stat)
-            {
-                <li class="stationFrom" style="display:none" onclick="SelectStation('@s.name','from')"><a href="#">@s.name</a></li>
-            }
-        </ul>
-        <ul>
-            <li id="searchTo">
-                <div class="form-group">
-                    <label>To</label>
-                    <input type="text" id="statTo" name="arr" onkeydown="ListStationTo()" placeholder="Enter a station" />
-                </div>
-            </li>
-            @foreach (StationData s in stat)
-            {
-                <li class="stationTo" style="display:none" onclick="SelectStation('@s.name','to')"><a href="#">@s.name</a></li>
-            }
-        </ul>
-        <button type="submit" id='submit' class="btn btn-primary">Submit</button>
-    </fieldset>
-}
-<h2>Search a Station</h2>
-<ul>
-    <li id="search">
-        <input type="text" id="stat" onkeydown="ListStation()" />
-    </li>
-    @foreach (StationData s in stat)
-    {
-        <li class="station" style="display:none">@Html.ActionLink(s.name, "GetStationsByName", "Station", routeValues: new { station = s.name }, htmlAttributes: null)</li>
-    }
-</ul>
+<h2>Search Station</h2>
+<p class="text-muted">Searh station will help you to find quickly a station from our system. You will receive data about opening hours, the location, the reviews, rating and of course delays of this station. For Each station, you can follow it to stay inform about delays in the notification bar.</p>
+<button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href = '/Station/SearchStation';">Search a Station</button>
+<h2>Search Connection</h2>
+<p class="text-muted">Searh Connection will help you to find quickly a traject between two stations. You will receive data about the train number, the delays for the departure and the arrival. You already can see the traject of each train by clicking on the number of this one.</p>
+<button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href = '/Connection/SearchConnection';">Search a Connection</button>
+<h2>Log In</h2>
+<p class="text-muted">Log in will help you to check delays, or specific details of each station and connection you want follow by creating an account or connect to yours to stock these informations.</p>
+<button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href = '/User/ConnectionPage';">Log In</button>
