--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 else
                 {
                     <li class="nav-item">
-                        <a href="/User/Notification/" class="nav-link">Notification</a>
+                        <a href="/User/Notification/" class="nav-link"> @ViewBag.Number Notifications</a>
                     </li>
                     <li class="nav-item">
                         <a href="/User/Index/" class="nav-link">Profile</a>
