--- a/getdelays.be/Views/User/Notification.cshtml
+++ b/getdelays.be/Views/User/Notification.cshtml
@@ -1,46 +1,80 @@
 ﻿@using GetDelaysAPI;
 @{
     ViewBag.Title = "Notifications";
-    List<NotificationStation> n = ViewBag.Notifications;
-    ViewBag.Number = n.Count;
+    List<NotificationStation> stations = ViewBag.NotificationStations;
+    List<NotificationConnection> connections = ViewBag.NotificationConnections;
+    ViewBag.Number = stations.Count+connections.Count;
 }
 
 <h2>Notifications</h2>
-@if (n != null && n.Count >= 1)
+@if ((stations != null && stations.Count>=1) || (connections!=null && connections.Count>=1) )
 {
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Station Name:</th>
+                <th scope="col">Details:</th>
                 <th scope="col">Delays:</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (NotificationStation s in n)
+            @if (stations.Count >= 1)
             {
-                if (s.Priority == "normal")
+                foreach (NotificationStation s in stations)
                 {
-                    <tr class="table-success">
-                        <td>@Html.ActionLink(s.StationName, "GetStationsByName", "Station", routeValues: new { station = s.StationName }, htmlAttributes: null)</td>
-                        <td>@s.Delays minute</td>
-                    </tr>
-                }
-                if (s.Priority == "warning")
-                {
-                    <tr class="table-warning">
-                        <td>@Html.ActionLink(s.StationName, "GetStationsByName", "Station", routeValues: new { station = s.StationName }, htmlAttributes: null)</td>
-                        <td>@s.Delays minute</td>
-                    </tr>
-                }
-                if (s.Priority == "danger")
-                {
-                    <tr class="table-danger">
-                        <td>@Html.ActionLink(s.StationName, "GetStationsByName", "Station", routeValues: new { station = s.StationName }, htmlAttributes: null)</td>
-                        <td>@s.Delays minute</td>
-                    </tr>
+                    if (s.Priority == "normal")
+                    {
+                        <tr class="table-success">
+                            <td>@Html.ActionLink(s.StationName, "GetStationsByName", "Station", routeValues: new { station = s.StationName }, htmlAttributes: null)</td>
+                            <td>@s.Delays minutes</td>
+                        </tr>
+                    }
+                    if (s.Priority == "warning")
+                    {
+                        <tr class="table-warning">
+                            <td>@Html.ActionLink(s.StationName, "GetStationsByName", "Station", routeValues: new { station = s.StationName }, htmlAttributes: null)</td>
+                            <td>@s.Delays minutes</td>
+                        </tr>
+                    }
+                    if (s.Priority == "danger")
+                    {
+                        <tr class="table-danger">
+                            <td>@Html.ActionLink(s.StationName, "GetStationsByName", "Station", routeValues: new { station = s.StationName }, htmlAttributes: null)</td>
+                            <td>@s.Delays minutes</td>
+                        </tr>
+                    }
                 }
             }
-
+            @if (connections.Count >= 1)
+            {
+                foreach (NotificationConnection c in connections)
+                {
+                    if (c.Priority == "normal")
+                    {
+                        <tr class="table-success">
+                            <td>@Html.ActionLink("from"+c.Departure+" to"+c.Arrival, "GetConnectionTime", "Connection", routeValues: new { dep=c.Departure,arr=c.Arrival,time=c.Time}, htmlAttributes: null)</td>
+                            <td>@c.DelaysDeparture minutes</td>
+                        </tr>
+                    }
+                    if (c.Priority == "warning")
+                    {
+                        <tr class="table-warning">
+                            <td>@Html.ActionLink("from" + c.Departure + " to" + c.Arrival, "GetConnectionTime", "Connection", routeValues: new { dep = c.Departure, arr = c.Arrival, time = c.Time }, htmlAttributes: null)</td>
+                            <td>@c.DelaysDeparture minutes</td>
+                        </tr>
+                    }
+                    if (c.Priority == "danger")
+                    {
+                        <tr class="table-danger">
+                            <td>@Html.ActionLink("from " + c.Departure + " to " + c.Arrival, "GetConnectionTime", "Connection", routeValues: new { dep = c.Departure, arr = c.Arrival, time = c.Time }, htmlAttributes: null)</td>
+                            <td>@c.DelaysDeparture minutes</td>
+                        </tr>
+                    }
+                }
+            }
         </tbody>
     </table>
+}
+else
+{
+    <p>You don't have notifications</p>
 }
